--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cerebral-view-inferno",
-  "version": "0.0.0-semantically-released",
+  "version": "1.0.1",
   "description": "React View layer package for Cerebral",
   "main": "index.js",
   "scripts": {
@@ -36,7 +36,6 @@
     "validate-commit-msg": "^1.1.1"
   },
   "dependencies": {
-    "cerebral": "^0.33.0 || ^0.34.0-0",
     "inferno": "^0.7.16",
     "inferno-dom": "^0.7.16",
     "inferno-create-element": "^0.7.16",
@@ -52,8 +51,5 @@
   },
   "release": {
     "analyzeCommits": "./sr-prerelease.js"
-  },
-  "dependencies": {
-    "lodash.get": "^4.0.0"
   }
 }
