--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cerebral-view-inferno",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "React View layer package for Cerebral",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "standard",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "build": "webpack --config webpack.build.config.js",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -27,13 +27,17 @@
   },
   "homepage": "https://github.com/cerebral/cerebral-view-inferno#readme",
   "devDependencies": {
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-0": "^6.5.0",
     "commitizen": "^2.5.0",
     "conventional-changelog": "0.0.17",
     "cz-customizable": "^2.7.1",
     "ghooks": "^1.0.3",
     "semantic-release": "^4.3.5",
     "standard": "^7.1.2",
-    "validate-commit-msg": "^1.1.1"
+    "validate-commit-msg": "^1.1.1",
+    "webpack": "^1.13.2"
   },
   "dependencies": {
     "inferno": "^0.7.16",
